--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/tpl/byweb/css/template.css": "/tpl/byweb/css/template.css",
     "/tpl/admin/dist/css/template.css": "/tpl/admin/dist/css/template.css",
-    "/tpl/admin/dist/js/tpl-scripts.js": "/tpl/admin/dist/js/tpl-scripts.js"
+    "/tpl/admin/dist/js/tpl-scripts.js": "/tpl/admin/dist/js/tpl-scripts.js",
+    "/tpl/byweb/js/aos.js": "/tpl/byweb/js/aos.js"
 }
