Add vue gallery

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,66 @@
 {
+    "/tpl/byweb/js/app.js": "/tpl/byweb/js/app.js",
     "/tpl/byweb/css/template.css": "/tpl/byweb/css/template.css",
     "/tpl/byweb/css/aos.css": "/tpl/byweb/css/aos.css",
     "/tpl/byweb/js/aos.js": "/tpl/byweb/js/aos.js",
     "/tpl/admin/dist/css/template.css": "/tpl/admin/dist/css/template.css",
     "/tpl/admin/dist/js/tpl-scripts.js": "/tpl/admin/dist/js/tpl-scripts.js",
+    "/tpl/admin/dist/webfonts/fa-brands-400.eot": "/tpl/admin/dist/webfonts/fa-brands-400.eot",
+    "/tpl/admin/dist/webfonts/fa-brands-400.svg": "/tpl/admin/dist/webfonts/fa-brands-400.svg",
+    "/tpl/admin/dist/webfonts/fa-brands-400.ttf": "/tpl/admin/dist/webfonts/fa-brands-400.ttf",
+    "/tpl/admin/dist/webfonts/fa-brands-400.woff": "/tpl/admin/dist/webfonts/fa-brands-400.woff",
+    "/tpl/admin/dist/webfonts/fa-brands-400.woff2": "/tpl/admin/dist/webfonts/fa-brands-400.woff2",
+    "/tpl/admin/dist/webfonts/fa-regular-400.eot": "/tpl/admin/dist/webfonts/fa-regular-400.eot",
+    "/tpl/admin/dist/webfonts/fa-regular-400.svg": "/tpl/admin/dist/webfonts/fa-regular-400.svg",
+    "/tpl/admin/dist/webfonts/fa-regular-400.ttf": "/tpl/admin/dist/webfonts/fa-regular-400.ttf",
+    "/tpl/admin/dist/webfonts/fa-regular-400.woff": "/tpl/admin/dist/webfonts/fa-regular-400.woff",
+    "/tpl/admin/dist/webfonts/fa-regular-400.woff2": "/tpl/admin/dist/webfonts/fa-regular-400.woff2",
+    "/tpl/admin/dist/webfonts/fa-solid-900.eot": "/tpl/admin/dist/webfonts/fa-solid-900.eot",
+    "/tpl/admin/dist/webfonts/fa-solid-900.svg": "/tpl/admin/dist/webfonts/fa-solid-900.svg",
+    "/tpl/admin/dist/webfonts/fa-solid-900.ttf": "/tpl/admin/dist/webfonts/fa-solid-900.ttf",
+    "/tpl/admin/dist/webfonts/fa-solid-900.woff": "/tpl/admin/dist/webfonts/fa-solid-900.woff",
+    "/tpl/admin/dist/webfonts/fa-solid-900.woff2": "/tpl/admin/dist/webfonts/fa-solid-900.woff2",
+    "/tpl/admin/dist/img/AdminLTELogo.png": "/tpl/admin/dist/img/AdminLTELogo.png",
+    "/tpl/admin/dist/img/avatar.png": "/tpl/admin/dist/img/avatar.png",
+    "/tpl/admin/dist/img/avatar2.png": "/tpl/admin/dist/img/avatar2.png",
+    "/tpl/admin/dist/img/avatar3.png": "/tpl/admin/dist/img/avatar3.png",
+    "/tpl/admin/dist/img/avatar4.png": "/tpl/admin/dist/img/avatar4.png",
+    "/tpl/admin/dist/img/avatar5.png": "/tpl/admin/dist/img/avatar5.png",
+    "/tpl/admin/dist/img/boxed-bg.jpg": "/tpl/admin/dist/img/boxed-bg.jpg",
+    "/tpl/admin/dist/img/boxed-bg.png": "/tpl/admin/dist/img/boxed-bg.png",
+    "/tpl/admin/dist/img/credit/american-express.png": "/tpl/admin/dist/img/credit/american-express.png",
+    "/tpl/admin/dist/img/credit/cirrus.png": "/tpl/admin/dist/img/credit/cirrus.png",
+    "/tpl/admin/dist/img/credit/mastercard.png": "/tpl/admin/dist/img/credit/mastercard.png",
+    "/tpl/admin/dist/img/credit/paypal.png": "/tpl/admin/dist/img/credit/paypal.png",
+    "/tpl/admin/dist/img/credit/paypal2.png": "/tpl/admin/dist/img/credit/paypal2.png",
+    "/tpl/admin/dist/img/credit/visa.png": "/tpl/admin/dist/img/credit/visa.png",
+    "/tpl/admin/dist/img/default-150x150.png": "/tpl/admin/dist/img/default-150x150.png",
+    "/tpl/admin/dist/img/icons.png": "/tpl/admin/dist/img/icons.png",
+    "/tpl/admin/dist/img/photo1.png": "/tpl/admin/dist/img/photo1.png",
+    "/tpl/admin/dist/img/photo2.png": "/tpl/admin/dist/img/photo2.png",
+    "/tpl/admin/dist/img/photo3.jpg": "/tpl/admin/dist/img/photo3.jpg",
+    "/tpl/admin/dist/img/photo4.jpg": "/tpl/admin/dist/img/photo4.jpg",
+    "/tpl/admin/dist/img/prod-1.jpg": "/tpl/admin/dist/img/prod-1.jpg",
+    "/tpl/admin/dist/img/prod-2.jpg": "/tpl/admin/dist/img/prod-2.jpg",
+    "/tpl/admin/dist/img/prod-3.jpg": "/tpl/admin/dist/img/prod-3.jpg",
+    "/tpl/admin/dist/img/prod-4.jpg": "/tpl/admin/dist/img/prod-4.jpg",
+    "/tpl/admin/dist/img/prod-5.jpg": "/tpl/admin/dist/img/prod-5.jpg",
+    "/tpl/admin/dist/img/user1-128x128.jpg": "/tpl/admin/dist/img/user1-128x128.jpg",
+    "/tpl/admin/dist/img/user2-160x160.jpg": "/tpl/admin/dist/img/user2-160x160.jpg",
+    "/tpl/admin/dist/img/user3-128x128.jpg": "/tpl/admin/dist/img/user3-128x128.jpg",
+    "/tpl/admin/dist/img/user4-128x128.jpg": "/tpl/admin/dist/img/user4-128x128.jpg",
+    "/tpl/admin/dist/img/user5-128x128.jpg": "/tpl/admin/dist/img/user5-128x128.jpg",
+    "/tpl/admin/dist/img/user6-128x128.jpg": "/tpl/admin/dist/img/user6-128x128.jpg",
+    "/tpl/admin/dist/img/user7-128x128.jpg": "/tpl/admin/dist/img/user7-128x128.jpg",
+    "/tpl/admin/dist/img/user8-128x128.jpg": "/tpl/admin/dist/img/user8-128x128.jpg",
+    "/tpl/byweb/img/why-us.jpg": "/tpl/byweb/img/why-us.jpg",
+    "/tpl/byweb/webfonts/fa-brands-400.ttf": "/tpl/byweb/webfonts/fa-brands-400.ttf",
+    "/tpl/byweb/webfonts/fa-brands-400.woff2": "/tpl/byweb/webfonts/fa-brands-400.woff2",
+    "/tpl/byweb/webfonts/fa-regular-400.ttf": "/tpl/byweb/webfonts/fa-regular-400.ttf",
+    "/tpl/byweb/webfonts/fa-regular-400.woff2": "/tpl/byweb/webfonts/fa-regular-400.woff2",
+    "/tpl/byweb/webfonts/fa-solid-900.ttf": "/tpl/byweb/webfonts/fa-solid-900.ttf",
+    "/tpl/byweb/webfonts/fa-solid-900.woff2": "/tpl/byweb/webfonts/fa-solid-900.woff2",
+    "/tpl/byweb/webfonts/fa-v4compatibility.ttf": "/tpl/byweb/webfonts/fa-v4compatibility.ttf",
+    "/tpl/byweb/webfonts/fa-v4compatibility.woff2": "/tpl/byweb/webfonts/fa-v4compatibility.woff2",
     "/tpl/byweb/css/all.css": "/tpl/byweb/css/all.css"
 }
