Correct adaptiv design for calc module

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -53,6 +53,7 @@
     "/tpl/admin/dist/img/user6-128x128.jpg": "/tpl/admin/dist/img/user6-128x128.jpg",
     "/tpl/admin/dist/img/user7-128x128.jpg": "/tpl/admin/dist/img/user7-128x128.jpg",
     "/tpl/admin/dist/img/user8-128x128.jpg": "/tpl/admin/dist/img/user8-128x128.jpg",
+    "/tpl/byweb/img/cms.png": "/tpl/byweb/img/cms.png",
     "/tpl/byweb/img/why-us.jpg": "/tpl/byweb/img/why-us.jpg",
     "/tpl/byweb/webfonts/fa-brands-400.ttf": "/tpl/byweb/webfonts/fa-brands-400.ttf",
     "/tpl/byweb/webfonts/fa-brands-400.woff2": "/tpl/byweb/webfonts/fa-brands-400.woff2",
