--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -54,6 +54,7 @@
     "/tpl/admin/dist/img/user7-128x128.jpg": "/tpl/admin/dist/img/user7-128x128.jpg",
     "/tpl/admin/dist/img/user8-128x128.jpg": "/tpl/admin/dist/img/user8-128x128.jpg",
     "/tpl/byweb/img/cms.png": "/tpl/byweb/img/cms.png",
+    "/tpl/byweb/img/reviews.jpg": "/tpl/byweb/img/reviews.jpg",
     "/tpl/byweb/img/why-us.jpg": "/tpl/byweb/img/why-us.jpg",
     "/tpl/byweb/webfonts/fa-brands-400.ttf": "/tpl/byweb/webfonts/fa-brands-400.ttf",
     "/tpl/byweb/webfonts/fa-brands-400.woff2": "/tpl/byweb/webfonts/fa-brands-400.woff2",
