--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@inotom/vue-go-top": "^1.3.0",
         "aos": "^2.3.4"
     }
 }
