Dev cache for calc module

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -45,6 +45,8 @@
     "/tpl/admin/dist/img/prod-3.jpg": "/tpl/admin/dist/img/prod-3.jpg",
     "/tpl/admin/dist/img/prod-4.jpg": "/tpl/admin/dist/img/prod-4.jpg",
     "/tpl/admin/dist/img/prod-5.jpg": "/tpl/admin/dist/img/prod-5.jpg",
+    "/tpl/admin/dist/img/samolet.png": "/tpl/admin/dist/img/samolet.png",
+    "/tpl/admin/dist/img/strelka.png": "/tpl/admin/dist/img/strelka.png",
     "/tpl/admin/dist/img/user1-128x128.jpg": "/tpl/admin/dist/img/user1-128x128.jpg",
     "/tpl/admin/dist/img/user2-160x160.jpg": "/tpl/admin/dist/img/user2-160x160.jpg",
     "/tpl/admin/dist/img/user3-128x128.jpg": "/tpl/admin/dist/img/user3-128x128.jpg",
@@ -57,6 +59,9 @@
     "/tpl/byweb/img/dirbyweb.jpg": "/tpl/byweb/img/dirbyweb.jpg",
     "/tpl/byweb/img/qr-code.jpg": "/tpl/byweb/img/qr-code.jpg",
     "/tpl/byweb/img/reviews.jpg": "/tpl/byweb/img/reviews.jpg",
+    "/tpl/byweb/img/samolet.gif": "/tpl/byweb/img/samolet.gif",
+    "/tpl/byweb/img/samolet.png": "/tpl/byweb/img/samolet.png",
+    "/tpl/byweb/img/strelka.png": "/tpl/byweb/img/strelka.png",
     "/tpl/byweb/img/telegram.png": "/tpl/byweb/img/telegram.png",
     "/tpl/byweb/img/why-us.jpg": "/tpl/byweb/img/why-us.jpg",
     "/tpl/byweb/webfonts/fa-brands-400.ttf": "/tpl/byweb/webfonts/fa-brands-400.ttf",
