--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@inotom/vue-go-top": "^1.3.0",
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "puppeteer": "^14.2.1"
     }
 }
