dev Breadcrumbs and fix moddule calc

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -72,5 +72,6 @@
     "/tpl/byweb/webfonts/fa-solid-900.woff2": "/tpl/byweb/webfonts/fa-solid-900.woff2",
     "/tpl/byweb/webfonts/fa-v4compatibility.ttf": "/tpl/byweb/webfonts/fa-v4compatibility.ttf",
     "/tpl/byweb/webfonts/fa-v4compatibility.woff2": "/tpl/byweb/webfonts/fa-v4compatibility.woff2",
-    "/tpl/byweb/css/all.css": "/tpl/byweb/css/all.css"
+    "/tpl/byweb/css/all.css": "/tpl/byweb/css/all.css",
+    "/tpl/byweb/img/mainbottomBg.jpg": "/tpl/byweb/img/mainbottomBg.jpg"
 }
